...
                                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YyA-EH-M1Y">
                                                        <rect key="frame" x="257" y="0.0" width="88" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="updateNotesButton"/>
                                                        <state key="normal" title="Update Note">
                                                            <color key="titleColor" name="Swaap Accent color 2"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J8g-pG-pm0">
                                                        <rect key="frame" x="252" y="0.0" width="93" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="updateEventsButton"/>
                                                        <state key="normal" title="Update Event">
                                                            <color key="titleColor" name="Swaap Accent color 2"/>
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZWn-rC-PlL">
                                            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                            <accessibility key="accessibilityConfiguration" identifier="EditButton"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <color key="tintColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G3e-MA-KKa">
                                            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                            <accessibility key="accessibilityConfiguration" identifier="ProfileBackButton"/>
                                            <color key="tintColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                            <state key="normal" image="chevron.left" catalog="system">
...
                                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                                <color key="tintColor" name="Swaap Accent Color 1"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="EditVC.NameField"/>
                                                                <gestureRecognizers/>
                                                                <constraints>
...
                                                                <rect key="frame" x="0.0" y="125.99999999999994" width="375" height="60"/>
                                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="EditVC.TaglineField"/>
                                                                <gestureRecognizers/>
                                                                <constraints>
...
                                                                <rect key="frame" x="0.0" y="193.99999999999994" width="375" height="60"/>
                                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="EditVC.JobTitleField"/>
                                                                <gestureRecognizers/>
                                                                <constraints>
...
                                                                <rect key="frame" x="0.0" y="261.99999999999994" width="375" height="60"/>
                                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="EditVC.LocationField"/>
                                                                <gestureRecognizers/>
                                                                <constraints>
...
                                                                <rect key="frame" x="0.0" y="329.99999999999994" width="375" height="60"/>
                                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="EditVC.IndustryField"/>
                                                                <gestureRecognizers/>
                                                                <constraints>
...
                                                                <rect key="frame" x="0.0" y="397.99999999999994" width="375" height="60"/>
                                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="EditVC.BirthdayField"/>
                                                                <gestureRecognizers/>
                                                                <constraints>
...
                                                                <rect key="frame" x="0.0" y="465.99999999999994" width="375" height="60.000000000000057"/>
                                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="EditVC.BioField"/>
                                                                <gestureRecognizers/>
                                                                <constraints>
...
                                                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oYc-Qv-gnK">
