...
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="@" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraint
                                                                <rect key="frame" x="0.0" y="0.0" width="18" height="51"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="FloatingTextField.@"/>
                                                                <fontDescription key="fontDescription" type="italicSystem" pointSize="20"/>
                                                                <color key="textColor" name="Swaap Accent color 2"/>
...
                                                                        <rect key="frame" x="0.0" y="0.0" width="1" height="51"/>
                                                                        <color key="backgroundColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="FloatingTextField.Separator"/>
                                                                        <constraints>
                                                                            <constraint firstAttribute="width" constant="1" id="x7C-dL-DWN"/>
...
                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s3q-Wc-5Ed">
                                                                                <rect key="frame" x="8" y="8" width="35" height="35"/>
                                                                                <accessibility key="accessibilityConfiguration" identifier="FloatingTextField.PlusButton"/>
                                                                                <color key="tintColor" name="Swaap Accent color 2"/>
                                                                                <state key="normal" image="plus.app.fill" catalog="system">
...
                                                                                <rect key="frame" x="8" y="8" width="35" height="35"/>
                                                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                                                <accessibility key="accessibilityConfiguration" identifier="FloatingTextField.SocialButton"/>
                                                                                <constraints>
                                                                                    <constraint firstAttribute="width" constant="35" id="23m-Qr-lZM"/>
...
                                                            <constraint firstAttribute="height" constant="35" id="dfk-g8-N4G"/>
                                                        </constraints>
                                                        <state key="normal" title="Cancel">
                                                            <color key="titleColor" name="socialButtonInstagramMain"/>
                                                        </state>
...
                                                        <rect key="frame" x="215" y="0.0" width="185" height="35"/>
                                                        <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="FloatingTextField.SaveButton"/>
                                                        <state key="normal" title="Save">
                                                            <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                        </state>
...
