...

/// Originally we meant to have NFC to swap info when you swipe your card up. Definitely a good release canvas item.
class ConnectViewController: UIViewController, ProfileAccessor, ContactsAccessor {
	
	@IBOutlet private weak var connectLabel: UILabel!
	@IBOutlet private weak var swaapLogo: UIImageView!
	@IBOutlet private weak var smallProfileCard: ProfileCardView!
	@IBOutlet private weak var buttonContainer: UIView!
	@IBOutlet private weak var scanQRButton: UIButton!
	@IBOutlet private weak var swipeUpLabelBottomConstraint: NSLayoutConstraint!
	@IBOutlet private weak var buttonContainerBottomConstraint: NSLayoutConstraint!
	@IBOutlet private weak var instructionsLabel: UILabel!
	
...
	}
	
	override func viewDidLoad() {
		super.viewDidLoad()
		smallProfileCard.isSmallProfileCard = true
		smallProfileCard.accessibilityIdentifier = "smallProfileCard"
		swaapLogo.accessibilityIdentifier = "QRCode"
		setupUI()
		updateProfileCard()
		updateQRCode()
		
		_ = NotificationCenter.default.addObserver(forName: .userProfileChanged, object: nil, queue: nil, using: { [weak self] _ in
			DispatchQueue.main.async {
...
