...
            </objects>
            <point key="canvasLocation" x="487" y="556"/>
        </scene>
        <!--Connect-->
        <scene sceneID="fN3-D3-PQa">
            <objects>
                <viewControllerPlaceholder storyboardName="Connect" id="vf7-X8-G9f" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Connect" id="WcS-1n-rOp"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="b1k-3c-SK5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="133" y="556"/>
        </scene>
...
